--- a/signup.html
+++ b/signup.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 	<a href="index.html" class="back-home-btn">&larr; Back to Home</a>
+	<div class="logo" style="position: absolute; left: 50%; top: 40px; transform: translateX(-50%); z-index: 10;">
+		<a href="index.html">
+			<img src="images/polybay.png" alt="G-ONE Logo" width="160" height="50" />
+		</a>
+	</div>
 	<div class="signup-container">
 		<button type="button" class="cancel-x-btn" aria-label="Cancel">&times;</button>
 		<form class="signup-form">
