--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             Expert-led training in digital technology, entrepreneurship, vocational skills,
             and professional development. Your journey to success starts here.
           </p>
-          <button class="shop-now">Start Learning Today</button>
+          <button class="shop-now" onclick="location.href='login.html'">Start Learning Today</button>
         </div>       
       </section>
 
